--- a/jquery.weekcalendar.css
+++ b/jquery.weekcalendar.css
@@ -1,19 +1,18 @@
 .wc-container {
-  font-size: 14px;
-  font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
 
 .wc-toolbar {
-  padding: 1em;
-  font-size:0.8em;
+    padding: 1em;
+    font-size:0.8em;
 }
 
 .wc-toolbar .wc-nav {
-  float:left;
+    float:left;
 }
 
 .wc-toolbar .wc-display {
-  float: right;
+    float: right;
 }
 
 .wc-toolbar button {
@@ -22,28 +21,27 @@
 }
 
 .wc-toolbar .wc-title {
-  text-align: center;
-  padding:0;
-  margin:0;
+    text-align: center;
+    padding:0;
+    margin:0;
 }
 
 .wc-container table {
-  border-collapse: collapse;
-  border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 .wc-container table td {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .wc-header {
-  background: #eee;
-  border-width:1px 0;
-  border-style:solid;
+    border-width:1px 0;
+    border-style:solid;
 }
 .wc-header table{
     width: 100%;
-  table-layout:fixed;
+    table-layout:fixed;
 }
 
 .wc-grid-timeslot-header,
@@ -63,17 +61,14 @@
 .wc-header .wc-user-header{
     text-align: center;
     padding: 0.4em 0;
-  overflow:hidden;
-}
-.wc-grid-timeslot-header {
-    background: #eee;
+    overflow:hidden;
 }
 
 
 
 .wc-scrollable-grid {
-    overflow-x: hidden !important;
-    overflow-y: auto !important;
+    overflow-x: hidden;
+    overflow-y: auto;
     position: relative;
     background-color: #fff;
     width: 100%;
@@ -84,7 +79,7 @@ table.wc-time-slots {
     width: 100%;
     table-layout: fixed;
     cursor: default;
-  overflow:hidden;
+    overflow:hidden;
 }
 
 .wc-day-column {
@@ -95,7 +90,7 @@ table.wc-time-slots {
 .wc-day-column-header{border-width: 0 0 1px 3px; border-style: solid;border-color:transparent;}
 .wc-scrollable-grid .wc-day-column-last,
 .wc-scrollable-grid .wc-day-column-middle{border-width: 0 0 0 1px; border-style: dashed;}
-.wc-scrollable-grid .wc-day-column-first{border-width: 0 0 0 3px; border-style: double;}
+.wc-scrollable-grid .wc-day-column-first{border-style: solid;}
 
 .wc-day-column-inner {
     width: 100%;
@@ -104,12 +99,12 @@ table.wc-time-slots {
 
 .wc-no-height-wrapper{
     position:relative;
-  overflow: visible;
+    overflow: visible;
     height: 0;
 }
 
 .wc-time-slot-wrapper {
-/*  top: 3px;*/
+    /*  top: 3px;*/
 }
 .wc-oddeven-wrapper .wc-full-height-column {
     opacity: 0.4;
@@ -138,7 +133,7 @@ table.wc-time-slots {
 
 .wc-full-height-column{
     display:block;
-/*  width:100%;*/
+    /*  width:100%;*/
 }
 
 
@@ -157,7 +152,7 @@ table.wc-time-slots {
 }
 .wc-hour-header.ui-state-active,
 .wc-hour-header.ui-state-default{
-  border-width:0 0 1px 0;
+    border-width:0 0 1px 0;
 }
 
 .wc-hour-end, .wc-hour-header {
@@ -166,10 +161,7 @@ table.wc-time-slots {
 }
 
 .wc-business-hours {
-    background-color: #E6EEF1;
     border-bottom: 1px solid #ccc;
-    color: #333;
-    font-size: 1.4em;
 }
 
 .wc-business-hours .wc-am-pm {
@@ -238,22 +230,22 @@ table.wc-time-slots {
 
 
 .wc-container .ui-draggable-dragging {
-   z-index: 1000;
+    z-index: 1000;
 }
 
 .free-busy-free{}
 .free-busy-busy{
-  background:url("./libs/css/smoothness/images/ui-bg_flat_0_aaaaaa_40x100.png") repeat scroll 50% 50% #666666;
+    background:url("./libs/css/smoothness/images/ui-bg_flat_0_aaaaaa_40x100.png") repeat scroll 50% 50% #666666;
 }
 
 /** hourLine */
 
 .wc-hourline {
-  height: 0;
-  border-top: 2px solid #FF7F6E;
-  overflow: hidden;
-  position: absolute;
-  width: inherit;
+    height: 0pt;
+    border-top: 2px solid #FF7F6E;
+    overflow: hidden;
+    position: absolute;
+    width: inherit;
 }
 
 /* IE6 hacks */
